# MCPToolForWebVulnerabilities-

./: -  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_CONFIG.md  CLAUDE_PROMPTS.md  CLI_COMMANDS_V2.md  CLI_USAGE_GUIDE.md  COMMAND_REFERENCE.md  COMPREHENSIVE_TEST_RESULTS.md  DEMO.md  FINAL_STATUS.md  FineTuning.ipynb  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_RESULTS.md  LICENSE  Makefile  README.md  SCOPE  V2_IMPLEMENTATION_SUMMARY.md  V2_READY_FOR_REVIEW.md  demo_ui.py  install_tools.sh  manifest.json  pentest-ai-prd.md  pentest-ai-v2-prd.md  pyproject.toml  run_mcp_server.py  test_full_system.py  test_gemini_report.py  test_report_gen.py  test_report_simple.py  verify_system.sh
pentest_mcp/: .env.example  __init__.py  agent.py  chat.py  cli.py  cli_ui.py  command_chain.py  config.py  diff.py  enrichment.py  groq_client.py  llm_providers.py  mcp_server.py  models.py  multi_target.py  notify.py  prompts.py  report_engine.py  report_formats.py  risk_scorer.py  scan_modes.py  scope.py  server.py  session.py  watch.py
pentest_mcp/tools/: __init__.py  analysis.py  professional.py  recon.py  scan.py  tool_detector.py  tool_registry.py  web_security.py
pentest_mcp/utils/: __init__.py  sanitizer.py
reports/: 0e8e8d6b_finansearch2.vercel.app__quick_20260327_230002.md  116f17f8_finansearch2.vercel.app__quick_20260327_222942.md  README.md  SCAN_SUMMARY.md  extensive_scan_45649407.md  latest_scan_038d7de7.md  medium_scan_6268f800.md  report.example.md  session_summary_038d7de7.md
reports/session_6268f800_backup/: session.db  session_summary.md
tests/: __init__.py  test_report_pipeline.py  test_session.py  test_system.py
vulnerable-app/: package-lock.json  package.json  server.js  vuln_routes.js
vulnerable-app/public/js/: jquery.js
vulnerable-app/views/: admin.ejs  index.ejs  login.ejs  ping.ejs  post.ejs  profile.ejs  register.ejs  search.ejs
wordlists/: common.txt
