[project]
name = "pentest-ai"
version = "0.1.0"
description = "AI-Powered Penetration Testing CLI with Gemini AI"
readme = "README.md"
authors = [
    { name = "Mohit Sahoo" },
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
keywords = ["pentest", "security", "ai", "gemini", "vuln-scanning"]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "dnspython>=2.6.0",
    "python-nmap>=0.7.1",
    "google-genai>=0.3.0",
    "aiosqlite>=0.20.0",
    "structlog>=24.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "playwright>=1.58.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
pentest = "pentest_mcp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
