[project]
name = "pentest-ai"
version = "3.0.0"
description = "AI-powered penetration testing CLI with natural language interface"
readme = "README.md"
authors = [
    { name = "Mohit Sahoo" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["security", "penetration-testing", "cli", "ai", "owasp", "vulnerability-scanner"]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "dnspython>=2.6.0",
    "python-nmap>=0.7.1",
    "google-genai>=0.3.0",
    "aiosqlite>=0.20.0",
    "structlog>=24.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "playwright>=1.58.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
pentest = "pentest_mcp.cli:app"
pentest-ai = "pentest_mcp.cli:app"

[project.urls]
Homepage = "https://github.com/MohitSahoo/MCPToolForWebVulnerabilities-"
Documentation = "https://github.com/MohitSahoo/MCPToolForWebVulnerabilities-/blob/main/README.md"
"Bug Tracker" = "https://github.com/MohitSahoo/MCPToolForWebVulnerabilities-/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
